code working after stack overflow fix. css still wrong

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1305,41 +1305,8 @@ svg>rect {
 
 /* END SHOW PAGE */
 
-.hello-user {
-    /*font-family: helvetica ;*/
-    /*width: 800px;*/
-    font-size: 5vw;
-    font-weight: 500;
-    /* Text in post view */
-    position: absolute;
-    z-index: 5;
 
-    width: 50%;
-    margin-top: -10%;
-    /* increase this negative integer to move up */
-    margin-left: -70%;
-    /* 70% Looks good.*/
-    padding-bottom: 1%;
 
-    text-align: center;
-
-    border-radius: 0 0 15px 0;
-    text-shadow: 2px 2px 2px rgba(100, 100, 100, .3);
-}
-
-.hello-user a {
-    /* Text in post view */
-    color: rgba(180, 90, 10, .9);
-}
-
-.hello-user a:hover {
-    /* background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/577362/rsz_1fire-swirling-acrobat-800-600.jpg) 70% 70%; */
-    /* ORIG no-repeat
-   /* -webkit-background-clip: text;*/
-    /* -webkit-text-fill-color: transparent;*/
-    color: rgba(0, 45, 0, .9);
-    /*text-shadow: 0px 0px 0px rgba(0,45,0,0.7);*/
-}
 
 
 /*FONT SELECTOR */
@@ -5673,9 +5640,9 @@ https://css-tricks.com/almanac/selectors/p/placeholder/
 
 .hello-user {
     font-family: 'Raleway';
-    position: relative;
-    margin-left: -4%;
-    font-size: 4vw;
+    /*position: relative;*/
+    /*margin-left: -4%;*/
+    /*font-size: 4vw;*/
     font-weight: 200;
     color: rgba(22,60,30,0.9);
     /*text-shadow: 2px 2px 2px rgba(200,20,0.7);*/
@@ -5684,12 +5651,12 @@ https://css-tricks.com/almanac/selectors/p/placeholder/
 }
 
 a.logout-button {
-    position: absolute;
+    /*position: absolute;*/
     /*margin-top: -100%;*/
     /*margin-left: 190%;*/
-    font-size: 50px;
+    /*font-size: 50px;*/
     text-decoration: none;
-    color: rgba(255,153,51,0.7) !important;
+    color: rgba(25,153,51,0.7) !important;
     text-shadow: 2px 2px 2px rgba(220,220,220,0.2), 1px 1px 1px rgba(230,230,230,0.2);
 }
 
